QuickFix for SkillIcons issue where few of the icons from react-icons library were not showing properly on mobile Screens.

--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,7 @@
   animation: slide 20s linear infinite;
 }
 
+/* .skillicons svg{
+  min-height: 40px;
+  min-width: 40px;
+} */
